--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.3.17",
-    "bluebird": "^3.4.0"
+    "bluebird": "^3.4.0",
+    "dotenv": "^2.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
