--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-zip": "^3.2.0"
+    "gulp-chmod": "^1.3.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-gunzip": "0.0.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-untar": "0.0.4",
+    "gulp-zip": "^3.2.0",
+    "request": "^2.72.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
