--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dotenv": "^2.0.0"
   },
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-awslambda": "^0.4.0",
     "gulp-chmod": "^1.3.0",
     "gulp-filter": "^4.0.0",
     "gulp-gunzip": "0.0.3",
     "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.5.2",
     "gulp-untar": "0.0.4",
     "gulp-zip": "^3.2.0",
     "request": "^2.72.0",
