--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp": "^3.9.1",
     "gulp-awslambda": "^0.4.0",
     "gulp-chmod": "^1.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.5.2",
     "gulp-zip": "^3.2.0",
     "request": "^2.72.0",
