--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.3.17",
-    "bluebird": "^3.4.0",
-    "dotenv": "^2.0.0"
+    "bluebird": "^3.4.0"
   },
   "devDependencies": {
     "del": "^2.2.2",
