--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bluebird": "^3.4.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-awslambda": "^0.4.0",
+    "gulp-babel": "^6.1.2",
     "gulp-chmod": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.5.2",
